kubernetes/apps/database/emqx/cluster/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  hostnames: ["emqx.samcloud.online"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-dashboard
          port: 18083
