kubernetes/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: external.samcloud.online
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: emqx.png
    gethomepage.dev/name: Emqx
    gethomepage.dev/group: Home
spec:
  ingressClassName: external
  rules:
    - host: emqx.samcloud.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
